--- a/cv.html
+++ b/cv.html
@@ -454,7 +454,7 @@
   </div>
  </div> 
 <footer class="container-fluid1 text-center">
-        <p style="color: #fff">Thank you Xiaoying Riley and bismillah for inspiration CV template :)</p>
+        <p style="color: #fff">Thank you Annisa Sholiha, Xiaoying Riley and bismillah for inspiration of CV template :)</p>
       </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
