--- a/latihan.html
+++ b/latihan.html
@@ -2,7 +2,7 @@
 <head>
     <title>Tempat Latihan</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=1024">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,400italic,300italic,300,500italic,700,700italic,900,900italic" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -454,7 +454,7 @@
   </div>
  </div> 
 <footer class="container-fluid1 text-center">
-        <p style="color: #fff">Thank you Xiaoying Riley and bismillah for inspiration CV template :)</p>
+        <p style="color: #fff">Thank you Annisa Sholiha, Xiaoying Riley and bismillah for inspiration CV template :)</p>
       </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
