--- a/Anshol-Februari2017.html
+++ b/Anshol-Februari2017.html
@@ -56,7 +56,7 @@
       Front End Programmer. Laman ini juga sekaligus memuat tulisannya yang selama ini
       hanya ada di kepalanya saja...<br>If you know more about me, please click <strong>Learn More
       </strong><br></p>
-      <p><a class="btn btn-primary btn-lg" href="https://annisasholiha.github.io" role="button">Learn more »</a></p>
+      <p><a class="btn btn-primary btn-lg" href="https://annisasholiha.github.io" role="button">Learn more</a></p>
     </div>
   </div>
   <div class="container">
@@ -204,8 +204,7 @@
         <div class="blog-post">
         <nav>
           <ul class="pager">
-            <li><a href="#">Previous</a></li>
-            <li><a href="#">Next</a></li>
+            <li><a href="Anshol-Maret2017.html">Next</a></li>
           </ul>
         </nav>
       </div>
@@ -220,6 +219,7 @@
           <h4>Archives</h4>
           <ol class="list-unstyled">
             <li><a href="Anshol-Februari2017.html">February 2017</a></li>
+            <li><a href="Anshol-Maret2017.html">March 2017</a></li>
           </ol>
         </div>
         <div class="sidebar-module">
