perbaikan link taman bermain

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="annisasholiha.github.io/cv.html">Curriculum Vitae</a></li>
-        <li><a href="annisasholiha.giithub.io/Anshol-Februari2017.html">Tempat Bermain Anshol</a></li>
+        <li><a href="annisasholiha.github.io/Anshol-Februari2017.html">Tempat Bermain Anshol</a></li>
       </ul>
     </div>
   </div>
