--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet"  href="bootstrap/css/bootstrap.css">
     <script>
       var user = prompt ("Please enter your name :)");
-      alert("Hey " + user + " :) !");
+      alert("Hey " + user + " !");
     </script>
     <title>Annisa Sholiha</title>
     <style>
