--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ make-smaller-titles: true
         <div class="col-md-12 main content-panel">
 
             <div class="gravatar">
-                <img src="{{ site.title_image }}" class="img-circle about-image" height="250" alt="{{ site.title }}" />
+                <img src="{{ site.url }}/assets/images/annisa.png" class="img-circle about-image" height="250" alt="{{ site.title }}" />
             </div>
 
             <h1 class="header author-header" itemprop="headline">{{ site.title }}</h1>
