--- a/CV.html
+++ b/CV.html
@@ -318,6 +318,18 @@ permalink: /cv/
     <div class="item">
       <div class="meta">
         <div class="upper-row">
+          <h3 class="job-title">Data Entry</h3>
+          <div class="time1">January-April 2014</div>
+        </div>
+        <div class="company">Wikikandidat.com</div>
+      </div>
+      <div class="details">
+        <p>I filled data of legislative candidates for National Legislative Election 2014 in Wikikandidat.com. Wikikandidat is a website that contain many of personal data of candidates that compete in National Legislative Election 2014 and also National Presidential Election 2014</p>
+      </div>
+   </div>
+    <div class="item">
+      <div class="meta">
+        <div class="upper-row">
           <h3 class="job-title">Researcher Assistant</h3>
           <div class="time1">August 2015</div>
         </div>
@@ -351,6 +363,17 @@ permalink: /cv/
         <p>I did a research in development dengue vaccine. Exactly, validation test cloning result, expression and purification of NS3 protein Dengue Virus (DENV) serotype 3 as candidate dengue vaccine. Methodology encompasses DNA isolation, Polymerase Chain Reaction (PCR), electrophoresis, SDS-PAGE, Western Blot, and protein purification with Immobilized Metal Affinity Chromatography (IMAC). This research is done to reach prerequisite of final thesis in Departement of Biology, FMIPA UI.</p>
     </div>
   </div>
+  <div class="item">
+      <div class="meta">
+        <div class="upper-row">
+          <h3 class="job-title">Admin</h3>
+          <div class="time1">August-October 2017</div>
+        </div>
+        <div class="company"></div>
+      <div class="details">
+        <p>My job-description as admin are managing sale of Scrum book (written by Rizky Syaiful) and EEL book (method of learning English and written by Rizky Syaiful).</p>
+      </div>
+   </div>
    <section class="section work-experience-section">
       <h2 class="section-title" style="padding-top: 45px">
         <i class="fa fa-handshake-o">
